adding DataPicker functionality some refactoring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="name">Name</string>
     <string name="description">Description</string>
     <string name="content">content</string>
+    <string name="date_format">%d/%d/%d</string>
+    <string name="date_separator">/</string>
 </resources>
