--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="add_link">Add link</string>
     <string name="settings">Settings</string>
     <string name="about">About</string>
+    <string name="header_text">Notes menu</string>
 </resources>
