--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="open_nav_drawer">Open navigation drawer</string>
     <string name="close_nav_drawer">Close navigation drawer</string>
     <string name="settings_text">Some settings</string>
+    <string name="about_text">This notebook is the property of the Half-Blood Prince</string>
 </resources>
