creating StartFragment layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="delete_note">Delete</string>
     <string name="change_note">Change</string>
     <string name="clear_notes">Clear</string>
+    <string name="sign_out">Sign out</string>
+    <string name="continue_text">Continue</string>
 </resources>
