--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="clear_notes">Clear</string>
     <string name="sign_out">Sign out</string>
     <string name="continue_text">Continue</string>
+    <string name="delete_note_text">Delete note?</string>
 </resources>
