implementing DialogFragment on notes clearing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="sign_out">Sign out</string>
     <string name="continue_text">Continue</string>
     <string name="delete_note_text">Delete note?</string>
+    <string name="clear_notes_text">Clear notes?</string>
 </resources>
